Update geoj article

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,6 @@
 ---
 
 @article{zhang2023rehumanize,
-  abbr = {GeoJ},
   bibtex_show = {true},
   abstract = {Traditional boundaries between people are vanishing due to the rise of Internet of Things technology. Our smart devices keep us connected to the world, but also monitor our daily lives through an unprecedented amount data collection. As a result, defining privacy has become more complicated. Individuals want to leverage new technology (e.g., making friends through sharing private experiences) and also avoid unwanted consequences (e.g., targeted advertising). In the age of ubiquitous digital content, geoprivacy is unique because concerns in this area are constantly changing and context-dependent. Multiple factors influence people’s location disclosure decisions, including time, culture, demographics, spatial granularity, and trust. Existing research primarily focuses on the computational efforts of protecting geoprivacy, while the variation of geoprivacy perceptions has yet to receive adequate attention in the data science literature. In this work, we explore geoprivacy from a cognate-based perspective and tackle our changing perception of the concept from multiple angles. Our objectives are to rehumanize this field from contextual, cultural, and economic dimensions and highlight the uniqueness of geodata under the broad topic of privacy. It is essential that we understand the spatial variations of geoprivacy perceptions in the era of big data. Masking geographic coordinates can no longer fully anonymize spatial data, and targeted geoprivacy protection needs to be further investigated to improve user experience.},
   author = {Zhang, H. and McKenzie, G.},
@@ -14,6 +13,7 @@
   pages = {189--208},
   doi = {10.1007/s10708-022-10598-4},
   html = {https://link.springer.com/article/10.1007/s10708-022-10598-4},
+  preview={geojournal.jpg},
 }
 
 @article{mckenzie2022privyto,
