Update bib preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,6 @@
 }
 
 @article{mckenzie2022privyto,
-  abbr = {TGIS},
   bibtex_show={true},
   abstract = {Concern over the privacy of our personal location is at an all-time high, yet the desire to share our lives with friends, family, and the public persists. Current methods and applications for sharing location content with the range of people in our lives are sorely lacking. Application users are often limited to sharing a single spatial resolution with all individuals, regardless of relation, and with little control over how this content is shared. Processes for sharing typically involve allowing a for-profit company access to one’s location before it can be transmitted to the intended recipient. In this work we propose a set of design goals and a design pattern for sharing personal location information that are realized through a prototype mobile web application. Our approach is built on the novel idea of obfuscated and encrypted location views, and promotes a uniquely open method for sharing. The intention of this article is to demonstrate that location sharing need not require one to expose private location information to third parties, and that methods exist to put an individual back in control of their content.},
   author = {McKenzie, G. and Romm, D. and Zhang, H. and Brunila, M.},
@@ -29,6 +28,7 @@
   pages = {1703--1717},
   doi = {10.1111/tgis.12924},
   html = {https://onlinelibrary.wiley.com/doi/10.1111/tgis.12924},
+  preview={tgis.jpg},
 }
 
 @article{zhang2018accuracy,
@@ -134,6 +134,7 @@
   title = {Why a PhD fast-track can be a bad idea},
   journal = {University Affairs},
   html = {https://www.universityaffairs.ca/opinion/the-black-hole/why-a-phd-fast-track-can-be-a-bad-idea/},
+  preview={ua-au.jpg},
 }
 
 @article{zhang2022publicopinionanalysis,
@@ -152,6 +153,7 @@
   title = {With coronavirus containment efforts, what are the privacy rights of patients?},
   journal = {The Conversation},
   html = {https://theconversation.com/with-coronavirus-containment-effortswhat-are-the-privacy-rights-of-patients-131752},
+  preview={the-conv.png},
 }
 
 @article{zhang2020canadiangradschool,
@@ -160,6 +162,7 @@
   title = {How to Pick the Right Canadian Grad School: A Geomatics Perspective},
   journal = {GoGeomatics Canada},
   html = {https://gogeomatics.ca/hey-geographers-how-to-pick-theright-canadian-grad-school-a-geomatics-perspective/},
+  preview={go-geom.jpg},
 }
 
 @article{zhang2019phdjobs,
@@ -169,6 +172,7 @@
   journal = {Toronto Star},
   pages = {A13},
   html = {https://www.thestar.com/opinion/contributors/thebigdebate/2019/09/03/should-governmentshelp-phds-get-jobs.html},
+  preview={trt-star.png},
 }
 
 @article{zhang2019geodatareview,
@@ -181,6 +185,7 @@
   pages = {e7-e8},
   doi = {10.1111/cag.12532},
   html = {https://onlinelibrary.wiley.com/doi/10.1111/cag.12532},
+  preview={cag.jpg},
 }
 
 @thesis{zhang2017qualityassessment,
@@ -191,4 +196,5 @@
   title = {Quality Assessment of the Canadian OpenStreetMap Road Networks},
   school = {Western University},
   html = {https://ir.lib.uwo.ca/etd/4560/},
+  preview={uwo-lib.png},
 }
