Add DOI for GIScience paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,6 +79,7 @@
   bibtex_show = {true},
   author = {McKenzie, G. and Zhang, H.},
   year = {2023},
+  doi = {10.4230/LIPIcs.GIScience.2023.9},
   title = {Platial k-anonymity: Improving location anonymity through temporal popularity signatures},
   booktitle = {The 12th International Conference on Geographic Information Science},
   html = {https://drops.dagstuhl.de/opus/volltexte/2023/18904/pdf/LIPIcs-GIScience-2023-9.pdf},
