--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,18 +1,46 @@
 ---
 ---
 
+@article{zhang2024geoprivacyKAB,
+  bibtex_show = {true},
+  abstract = {China has an Internet penetration rate of over 70 percent and a massive user base of social media. However, the topic of privacy attitudes among Chinese individuals remains understudied. We analyzed geoprivacy concerns in China through an online survey and regression analysis. Our findings suggest a positive relation among privacy knowledge, attitude, and behavior, consistent with related literature. Declarative knowledge (such as privacy rights), on the other hand, was found to have a negative relation with privacy concerns, which has not been reported previously. In terms of demographic moderators, females had less privacy knowledge but more privacy protection behaviors, while the impact of age on privacy concerns was inconclusive. A notable discovery was the regional difference in privacy concerns within China, suggesting the potential geopolitical influence on individuals' values and beliefs. Combined with the uncovering of behavioral change in response to involuntary location disclosure, the results of this article challenge the conventional notion that Chinese individuals are indifferent to their online privacy, thus reintroducing an underexplored perspective from the Global South into geoprivacy studies.},
+  author = {Zhang, H. and McKenzie, G.},
+  year = {in press},
+  title = {Geoprivacy knowledge, attitudes, and behaviors in contemporary China},
+  journal = {Geographical Review},
+  volume = {},
+  number = {},
+  pages = {},
+  doi = {10.1080/00167428.2024.2422873},
+  html = {},
+  pdf = {Geoprivacy_Attitudes_in_China_ACCEPTED.pdf},
+  preview={geog-review.jpg},
+}
+
+@thesis{zhang2024place,
+  bibtex_show = {true},
+  abstract = {The emergence of the World Wide Web has eroded traditional boundaries, connecting individuals globally while giving rise to intricate privacy concerns. Within this context, the concept of geoprivacy takes centre stage, highlighting the control of personal location information flow and is influenced by dynamic factors such as time, culture, demographics, and trust. This dissertation posits geoprivacy as a social form that underpins fundamental aspects of social interaction rather than a unilateral desire for isolation from society. The need for location sharing by individuals necessitates a rehumanized, context-dependent exploration, as cultural norms and personal characteristics can lead to varying levels of geoprivacy expectations. Therefore, a human-centred approach is adopted to investigate user responses to regulatory mandates and probe geoprivacy concerns within China and beyond. The first manuscript clarifies the uniqueness of geoprivacy, establishing a humanistic perspective to counteract the dehumanizing effects of datafication and recognize the spatial variations of geoprivacy attitudes. The subsequent manuscript dismantles the ethnocentric view of geoprivacy. Through the analysis of social media data, the study unveils the specific landscape of geoprivacy attitudes within the Confucian realm and reiterates the importance of cultural distinctions in privacy studies. The third manuscript takes a step further by re-examining the relationship between knowledge, attitude, and behaviour, providing deeper contextual insights into understanding geoprivacy behaviours in computer-mediated environments. By employing data collected from an online survey, the study discovers gender disparities and regional divergences in the cognitive perspective of geoprivacy. In its entirety, the dissertation synthesizes these contexts into place-based privacy, wherein geographical information becomes a pivotal determinant and extension of an individual's privacy attitudes. As both a humanistic and social concept, geoprivacy transcends mere degrees of anonymity in data disclosure. The empirical studies in this dissertation showcase the varying nature of geoprivacy perceptions even within the Chinese regions. These findings ultimately enrich the dialogue surrounding privacy, technology, and society, transforming geoprivacy from a self-reinforcing cycle of universal values into a diverse concept embraced by a broader population.},
+  author = {Zhang, H.},
+  year = {2024},
+  title = {Place-based privacy: Understanding attitudes and behaviours across China and beyond},
+  school = {McGill University},
+  html = {https://escholarship.mcgill.ca/concern/theses/4j03d539z},
+  preview={mcgill-lib.png},
+}
+
 @article{zhang2023rehumanize,
   bibtex_show = {true},
   abstract = {Traditional boundaries between people are vanishing due to the rise of Internet of Things technology. Our smart devices keep us connected to the world, but also monitor our daily lives through an unprecedented amount data collection. As a result, defining privacy has become more complicated. Individuals want to leverage new technology (e.g., making friends through sharing private experiences) and also avoid unwanted consequences (e.g., targeted advertising). In the age of ubiquitous digital content, geoprivacy is unique because concerns in this area are constantly changing and context-dependent. Multiple factors influence people’s location disclosure decisions, including time, culture, demographics, spatial granularity, and trust. Existing research primarily focuses on the computational efforts of protecting geoprivacy, while the variation of geoprivacy perceptions has yet to receive adequate attention in the data science literature. In this work, we explore geoprivacy from a cognate-based perspective and tackle our changing perception of the concept from multiple angles. Our objectives are to rehumanize this field from contextual, cultural, and economic dimensions and highlight the uniqueness of geodata under the broad topic of privacy. It is essential that we understand the spatial variations of geoprivacy perceptions in the era of big data. Masking geographic coordinates can no longer fully anonymize spatial data, and targeted geoprivacy protection needs to be further investigated to improve user experience.},
   author = {Zhang, H. and McKenzie, G.},
   year = {2023},
-  title = {Rehumanize geoprivacy: from disclosure control to human perception},
+  title = {Rehumanize geoprivacy: From disclosure control to human perception},
   journal = {GeoJournal},
   volume = {88},
   number = {1},
   pages = {189--208},
   doi = {10.1007/s10708-022-10598-4},
   html = {https://link.springer.com/article/10.1007/s10708-022-10598-4},
+  pdf = {Rehumanize_Geoprivacy_Accepted.pdf},
   preview={geojournal.jpg},
 }
 
@@ -37,7 +65,7 @@
   abstract = {Volunteered geographic information (VGI) has been applied in many fields such as participatory planning, humanitarian relief and crisis management. One of the reasons for popularity of VGI is its cost-effectiveness. However, the coverage and accuracy of VGI cannot be guaranteed. The issue of geospatial data quality in the OpenStreetMap (OSM) project has become a trending research topic because of the large size of the dataset and the multiple channels of data access. This paper focuses on a national study of the Canadian OSM road network data for the assessment of completeness, positional accuracy, attribute accuracy, semantic accuracy and lineage. The OSM road networks in Canada have generally reliable quality compared to Digital Mapping Technologies Inc. Urban areas and footways received more contributions than rural areas and motorways, and imported road segments from GeoBase have slightly better quality than the national OSM dataset. The findings of the map quality can potentially guide cartographic product selection for interested parties and offer a better understanding of future improvement of OSM quality. In addition, the study presents the OSM contributions influenced by data import and remote mapping.},
   author = {Zhang, H. and Malczewski, J.},
   year = {2018},
-  title = {Accuracy Evaluation of the Canadian OpenStreetMap Road Networks},
+  title = {Accuracy evaluation of the Canadian OpenStreetMap road networks},
   journal = {International Journal of Geospatial and Environmental Research},
   volume = {5},
   number = {2},
@@ -64,7 +92,7 @@
   abstract = {A large amount of crowd-sourced geospatial data have been created in recent years due to the interactivity of Web 2.0 and the availability of Global Positioning System (GPS). This geo-information is typically referred to as volunteered geographic information (VGI). OpenStreetMap (OSM) is a popular VGI platform that allows users to create or edit maps using GPS-enabled devices or aerial imageries. The issue of quality of geo-information generated by OSM has become a trending research topic because of the large size of the dataset and the inapplicability of Linus' Law in a geospatial context. This chapter systematically reviews the quality evaluation process of OSM, and demonstrates a case study of London, Canada for the assessment of completeness, positional accuracy and attribute accuracy. The findings of the quality evaluation can potentially serve as a guide of cartographic product selection and provide a better understanding of the development of OSM quality over geographic space and time.},
   author = {Zhang, H. and Malczewski, J.},
   year = {2017},
-  title = {Quality Evaluation of Volunteered Geographic Information: The Case of OpenStreetMap},
+  title = {Quality evaluation of volunteered geographic information: The case of OpenStreetMap},
   booktitle = {Volunteered Geographic Information and the Future of Geospatial Data},
   editor = {Campelo, C. and Bertolotto, M. and Corcoran, P.},
   pages = {19--46},
@@ -116,7 +144,7 @@
   abstract = {On December 15th, 2021, the First Workshop on Cyber Ethics in Platial Research was held in Enschede, the Netherlands (virtually), in conjunction with the Third International Symposium on Platial Information Science (PLATIAL'21). The objective of this workshop was to explore the unique aspects of ethics related to place. During the workshop, invited speakers first provided a summary of their related work followed by organizers and attendees discussing the topic more broadly. With the goal of spurring an active discussion, the organizers prompted discussion through proposing the following three questions to the speakers and workshop attendees.},
   author = {Zhang, H. and McKenzie, G. and Tomko, M. and Egorova, E. and Kim, J.},
   year = {2022},
-  title = {Report from the First Workshop on Cyber Ethics in Platial Research},
+  title = {Report from the first workshop on cyber ethics in platial research},
   booktitle = {Proceedings of the 3rd International Symposium on Platial Information Science},
   pages = {87--92},
   doi = {10.5281/zenodo.6413003},
@@ -129,7 +157,7 @@
   abstract = {While spatial data privacy is not a new concern, recent informationtechnology developments that allow for the increased collection and alternativeuse of spatial data have brought the discussion about geoprivacy back in focus.In this work we draw a parallel between a conceptualization of horror based onwork from cognitive scientists and philosophers, and the intrusiveness of currentdata collection methods, the unauthorized use of this data, and the transgressionsmade by data stewards. By drawing this connection, we discuss the familiar topicof data privacy through a novel and jarring lens that clarifies the importance ofdata privacy and elucidates the particular importance of geoprivacy.},
   author = {Romm, D. and Zhang, H. and Verma, P. and McKenzie, G. and Chen, E.},
   year = {2021},
-  title = {``Data Horror'': Mapping (Spatial) Data Privacy Violations onto a Cognitive Account of Horror},
+  title = {``Data horror'': Mapping (spatial) data privacy violations onto a cognitive account of horror},
   booktitle = {Spatial Data Science Symposium},
   doi = {10.25436/E23S3T},
   html = {https://escholarship.org/uc/item/7902g5hh},
@@ -166,7 +194,7 @@
 @article{zhang2020canadiangradschool,
   author = {Zhang, H.},
   year = {2020},
-  title = {How to Pick the Right Canadian Grad School: A Geomatics Perspective},
+  title = {How to pick the right Canadian grad school: A geomatics perspective},
   journal = {GoGeomatics Canada},
   html = {https://gogeomatics.ca/hey-geographers-how-to-pick-the-right-canadian-grad-school-a-geomatics-perspective/},
   preview={go-geom.jpg},
@@ -200,7 +228,7 @@
   abstract = {Volunteered geographic information (VGI) has been applied in many fields such as participatory planning, humanitarian relief and crisis management because of its cost-effectiveness. However, coverage and accuracy of VGI cannot be guaranteed. OpenStreetMap (OSM) is a popular VGI platform that allows users to create or edit maps using GPS-enabled devices or aerial imageries. The issue of geospatial data quality in OSM has become a trending research topic because of the large size of the dataset and the multiple channels of data access. The objective of this study is to examine the overall reliability of the Canadian OSM data. A systematic review is first presented to provide details on the quality evaluation process of OSM. A case study of London, Ontario is followed as an experimental analysis of completeness, positional accuracy and attribute accuracy of the OSM street networks. Next, a national study of the Canadian OSM data assesses the overall semantic accuracy and lineage in addition to the quality measures mentioned above. Results of the quality evaluation are compared with associated OSM provenance metadata to examine potential correlations. The Canadian OSM road networks were found to have comparable accuracy with the tested commercial database (DMTI). Although statistical analysis suggests that there are no significant relations between OSM accuracy and its editing history, the study presents the complex processes behind OSM contributions possibly influenced by data import and remote mapping. The findings of this thesis can potentially guide cartographic product selection for interested parties and offer a better understanding of future quality improvement in OSM.},
   author = {Zhang, H.},
   year = {2017},
-  title = {Quality Assessment of the Canadian OpenStreetMap Road Networks},
+  title = {Quality assessment of the Canadian OpenStreetMap road networks},
   school = {Western University},
   html = {https://ir.lib.uwo.ca/etd/4560/},
   preview={uwo-lib.png},
