Update privacyKAB in bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,14 +5,10 @@
   bibtex_show = {true},
   abstract = {China has an Internet penetration rate of over 70 percent and a massive user base of social media. However, the topic of privacy attitudes among Chinese individuals remains understudied. We analyzed geoprivacy concerns in China through an online survey and regression analysis. Our findings suggest a positive relation among privacy knowledge, attitude, and behavior, consistent with related literature. Declarative knowledge (such as privacy rights), on the other hand, was found to have a negative relation with privacy concerns, which has not been reported previously. In terms of demographic moderators, females had less privacy knowledge but more privacy protection behaviors, while the impact of age on privacy concerns was inconclusive. A notable discovery was the regional difference in privacy concerns within China, suggesting the potential geopolitical influence on individuals' values and beliefs. Combined with the uncovering of behavioral change in response to involuntary location disclosure, the results of this article challenge the conventional notion that Chinese individuals are indifferent to their online privacy, thus reintroducing an underexplored perspective from the Global South into geoprivacy studies.},
   author = {Zhang, H. and McKenzie, G.},
-  year = {in press},
+  year = {2024},
   title = {Geoprivacy knowledge, attitudes, and behaviors in contemporary China},
   journal = {Geographical Review},
-  volume = {},
-  number = {},
-  pages = {},
   doi = {10.1080/00167428.2024.2422873},
-  html = {},
   pdf = {Geoprivacy_Attitudes_in_China_ACCEPTED.pdf},
   preview={geog-review.jpg},
 }
