--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,6 +53,7 @@
   doi = {10.1111/tgis.12924},
   html = {https://onlinelibrary.wiley.com/doi/10.1111/tgis.12924},
   preview={tgis.jpg},
+  pdf = {McKenzie_PrivyTo.pdf},
 }
 
 @article{zhang2018accuracy,
@@ -68,19 +69,21 @@
   pages = {1},
   url = {https://dc.uwm.edu/ijger/vol5/iss2/1},
   html = {https://dc.uwm.edu/ijger/vol5/iss2/1},
+  pdf = {IJGER - Accuracy Evaluation of the Canadian OpenStreetMap Road Networks.pdf},
 }
 
 @incollection{mckenzie2023privacyethics,
   bibtex_show={true},
   author = {McKenzie, G. and Zhang, H. and Gambs, S.},
   year = {2023},
-  title = {Privacy and Ethics in GeoAI},
+  title = {Privacy and ethics in GeoAI},
   booktitle = {Handbook of Geospatial Artificial Intelligence},
   editor = {Gao, S. and Hu, Y. and Li, W.},
   publisher = {CRC Press},
   preview={geoai-book.jpg},
   html = {https://www.taylorfrancis.com/books/edit/10.1201/9781003308423/handbook-geospatial-artificial-intelligence-song-gao-yingjie-hu-wenwen-li},
   abstract = {Any advancement in technology is accompanied by new concerns over its ethical use and impacts on privacy. While a notoriously difficult term to define, privacy as it relates to technology usage, can be described as the ability of an individual or group to control their personal information. Like many ethical concepts, this definition evolves with changes in societal and technical norms. The emergence of machine learning and related artificial intelligence techniques has again shifted societal concerns about the privacy of our persons, socio-demographic group membership, and personal data. Location data are particularly sensitive as they link information across sources and can be used to infer a wide variety of personal information. This makes data privacy one of the most important ethical discussions within the field of geographic artificial intelligence (GeoAI). The main objective of this chapter is to explore the unique privacy concerns associated with AI techniques used for analyzing geospatial information. After providing an overview of the topic, we describe some of the most common techniques and leading application areas through which data privacy and GeoAI are converging. Finally, we suggest a number of ways that privacy within GeoAI can improve and highlight emerging topics within the field.},
+  pdf = {McKenzie_Privacy_GeoAI.pdf}, 
 }
 
 @incollection{zhang2017qualityevaluation,
@@ -96,6 +99,7 @@
   doi = {10.4018/978-1-5225-2446-5.ch002},
   html = {https://www.igi-global.com/gateway/chapter/178797},
   preview={vgi-book.jpg},
+  pdf = {VGI_Book_Chapter_2.pdf},
 }
 
 @inproceedings{mckenzie2023platialkanonymity,
@@ -108,6 +112,7 @@
   html = {https://drops.dagstuhl.de/opus/volltexte/2023/18904/pdf/LIPIcs-GIScience-2023-9.pdf},
   doi = {10.4230/LIPIcs.GIScience.2023.9},
   abstract = {While it is increasingly necessary in today’s digital society, sharing personal location information comes at a cost. Sharing one’s precise place of interest, e.g., Compass Coffee, enables a range of location-based services, but substantially reduces the individual’s privacy. Methods have been developed to obfuscate and anonymize location data while still maintaining a degree of utility. One such approach, spatial k-anonymity, aims to ensure an individual’s level of anonymity by reporting their location as a set of k potential locations rather than their actual location alone. Larger values of k increase spatial anonymity while decreasing the utility of the location information. Typical examples of spatial k-anonymized datasets present elements as simple geographic points with no attributes or contextual information. In this work, we demonstrate that the addition of publicly available contextual data can significantly reduce the anonymity of a k-anonymized dataset. Through the analysis of place type temporal visitation patterns, hours of operation, and popularity values, one’s anonymity can be decreased by more than 50 percent. We propose a platial k-anonymity approach that leverages a combination of temporal popularity signatures and reports the amount that k must increase in order to maintain a certain level of anonymity. Finally, a method for reporting platial k-anonymous regions is presented and the implications of our methods are discussed.},
+  pdf = {LIPIcs.GIScience.2023.9.pdf},
 }
 
 @inproceedings{zhang2023placebasedprivacy,
@@ -120,6 +125,7 @@
   booktitle = {The 8th Conference on Spatial Knowledge and Information Canada},
   doi = {10.17605/OSF.IO/N6DU5},
   html = {https://osf.io/adfxv},
+  pdf = {SKI2023_paper_20_Hongyu_Zhang.pdf},
 }
 
 @inproceedings{zhang2022towardsplacebasedprivacy,
@@ -132,6 +138,7 @@
   booktitle = {IEEE International Symposium on Technology and Society},
   html = {https://escholarship.mcgill.ca/concern/papers/0p096c814},
   doi = {10.1109/ISTAS55053.2022.10227114},
+  pdf = {ISTAS_2022_Proceeding_Submission.pdf},
 }
 
 @inproceedings{zhang2022workshopcyberethics,
@@ -145,6 +152,7 @@
   pages = {87--92},
   doi = {10.5281/zenodo.6413003},
   html = {https://zenodo.org/record/6413003},
+  pdf = {Report from the First Workshop on Cyber Ethics in Platial Research.pdf},
 }
 
 @inproceedings{romm2021datahorror,
@@ -216,6 +224,7 @@
   pages = {e7-e8},
   doi = {10.1111/cag.12532},
   html = {https://onlinelibrary.wiley.com/doi/10.1111/cag.12532},
+  pdf = {cag.12532.pdf},
   preview={cag.jpg},
 }
 
